# ml-pipeline

./: .gitignore  README.md  main.py  pyproject.toml
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml  slack.yaml
configs/data/: default.yaml  patent.yaml
configs/logger/: default.yaml  mlflow.yaml
configs/model/: default.yaml  patent.yaml
configs/trainer/: default.yaml
notebook/: 000_data_check.ipynb  001_demo.ipynb
notebook/lightning_logs/version_0/: hparams.yaml  metrics.csv
src/: eval.py  train.py
src/callbacks/: notifications.py
src/data/: data.py  mnist_datamodule.py  patent_datamodule.py
src/models/: bert_module.py  mnist_module.py
src/utils/: instantiators.py  logging_utils.py  pylogger.py  rich_utils.py  utils.py
